2004-01-07  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/DefaultBoundedRangeModel/
	DefaultBoundedRangeModel.java, setExtent.java, setMaximum.java,
	setMinimum.java, setValue.java: Added "// Uses: setRangeProperties".

2004-01-07  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/awt/geom/QuadCurve2D/solveQuadratic.java: 
	When debug option is set and the result is not as expected,
	emit the actual and expected solutions.
	
2004-01-07  Sascha Brawer  <brawer@dandelis.ch>
	
	* gnu/testlet/javax/swing/undo/CompoundEdit/
	addEdit.java, canRedo.java, canUndo.java, isInProgress.java,
	lastEdit.java: New tests.
	
	* gnu/testlet/javax/swing/undo/UndoableEditSupport/
	UndoableEditSupport.java, createCompoundEdit.java,
	getUndoableEditListeners.java, getUpdateLevel.java: New tests.
	
	Classpath bug #7119.
	* gnu/testlet/javax/swing/undo/UndoableEditSupport/toString.java:
	New test.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7109.
	* gnu/testlet/javax/swing/undo/UndoableEditSupport/beginUpdate.java:
	New test.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/
	createDataBuffer, getSampleSize.java: New tests.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7107.
	* gnu/testlet/javax/swing/DefaultBoundedRangeModel/
	DefaultBoundedRangeModel.java, getChangeListeners.java,
	getExtent.java, getMaximum.java, getMinimum.java,
	getValueIsAdjusting.java, getValue.java, setExtent.java,
	setMaximum.java, setMinimum.java, setRangeProperties.java,
	setValueIsAdjusting.java, setValue.java, toString.java: New tests.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/javax/swing/event/EventListenerList/getListeners.java,
	gnu/testlet/javax/swing/event/EventListenerList/getListenerCount.java,
	gnu/testlet/javax/swing/event/EventListenerList/getListenerList.java,
	gnu/testlet/javax/swing/event/EventListenerList/toString.java:
	New tests.
